# burrito

./: Cargo.toml  Makefile  README.md  example_cfg.cfg  install.bat  package.json  rust-toolchain
.github/workflows/: build.yml  release.yml
src/: lib.rs
src/burrito/: alert.rs  bloom_filter.rs  burrito_cfg.rs  burrito_data.rs  event_filter.rs  log_event.rs  log_reader.rs  log_watcher.rs  mod.rs  path_cache.rs  rules.rs  serde_utils.rs  systems.rs  types.rs  utils.rs
