[package]
name = "burrito"
version = "0.2.1"
edition = "2021"

[dependencies]

chrono = { version = "0.4.26", features = ["serde"] }
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
home = "0.5.3"
regex = "1.9.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rodio = "0.17.1"
serde = "1.0.169"
serde_derive = "1.0.171"
serde_json = "1.0.100"
serde_with = { version = "3.0.0", features = ["json"] }
strum = "0.25"
strum_macros = "0.25"
termcolor = "1.2.0"
